# yakuake-sessions

./: .gitignore  Makefile  README.rst  automatically_save_yakuake_state.sh  restore_yakuake_session.sh  ysess.py
packaging/yakuake-session-manager/: README.rst  __init__.py  pyproject.toml  ysess.py
src/yks/: __init__.py  sortedDict.py  ysess.py
